fix: enhance form layout with improved styling and spacing for better usability

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -88,6 +88,10 @@ td {
   margin-bottom: 5px;
 }
 
+.form > div {
+  margin-bottom: 15px;
+}
+
 .container-search input {
   border-radius: 50px 0 0 50px;
   width: 300px;
